@@ -1,7 +1,17 @@
 {
-  "count": 9,
-  "uniques": 8,
+  "count": 10,
+  "uniques": 9,
   "clones": [
+    {
+      "timestamp": "2026-01-19T00:00:00Z",
+      "count": 0,
+      "uniques": 0
+    },
+    {
+      "timestamp": "2026-01-20T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
     {
       "timestamp": "2026-01-21T00:00:00Z",
       "count": 0,
@@ -61,16 +71,6 @@
       "timestamp": "2026-02-01T00:00:00Z",
       "count": 1,
       "uniques": 1
-    },
-    {
-      "timestamp": "2026-02-02T00:00:00Z",
-      "count": 0,
-      "uniques": 0
-    },
-    {
-      "timestamp": "2026-02-03T00:00:00Z",
-      "count": 0,
-      "uniques": 0
     }
   ]
 }
